--- a/Product.html
+++ b/Product.html
@@ -69,27 +69,27 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_dream.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_01.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Dream Bed</a>
+                    <a href="#">MUKWANO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_egulu.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_02.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Egulu Bed</a>
+                    <a href="#">AUTUMN</a>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_rustic.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_03.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">3</a>
+                    <a href="#">PIERRE</a>
                 </h3>
                 <br><br>
             </div>
@@ -100,28 +100,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_shelf.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_04.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">4</a>
+                    <a href="#">ROYAL</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_platform.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_05.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">5</a>
+                    <a href="#">ARROW</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_cabin.jpg" alt="">
+                    <img class="img-responsive" src="images/Dining_06.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">6</a>
+                    <a href="#">KIZITOWA</a>
                 </h3>
                 <br><br>
             </div>
@@ -131,28 +131,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_kidshouse.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_01.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">7</a>
+                    <a href="#">COUNTRY</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_kidshouse.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_02.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">8</a>
+                    <a href="#">NYOTA</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed_kidshouse.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_03.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">9</a>
+                    <a href="#">ELM</a>
                 </h3>
                 <br><br>
             </div>
