--- a/Product_2.html
+++ b/Product_2.html
@@ -68,28 +68,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/tables_wabwelu.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_04.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Wabwelu Table</a>
+                    <a href="#">MARINA</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/table_c.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_05.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">C Table</a>
+                    <a href="#">AMANYI</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/table_wansi.jpg" alt="">
+                    <img class="img-responsive" src="images/Chair_06.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Wansi Table</a>
+                    <a href="#">AMAGULU</a>
                 </h3>
                 <br><br>
             </div>
@@ -100,28 +100,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/table_omusiri.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_01.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Omusiri Table</a>
+                    <a href="#">CUBE TRAY</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/table_S.jpeg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_02.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">S Table</a>
+                    <a href="#">EMPEWO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_amanyibench.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_03.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Amanyi Bench</a>
+                    <a href="#">RIO</a>
                 </h3>
                 <br><br>
             </div>
@@ -131,28 +131,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_amaka.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_04.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Amaka Chair</a>
+                    <a href="#">LOG</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_marina.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_05.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Marina Chair</a>
+                    <a href="#">KIRO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_sodo.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_06.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Sodo Chair</a>
+                    <a href="#">PEMBE</a>
                 </h3>
                  <br><br>
             </div>
