--- a/Product_3.html
+++ b/Product_3.html
@@ -69,28 +69,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_wing.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_07.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Wing Chair</a>
+                    <a href="#">KYAALO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/chair_kusabika.jpg" alt="">
+                    <img class="img-responsive" src="images/Sidetable_08.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Kusabika Chair</a>
+                    <a href="#">ZIG ZAG</a>
                 </h3>
                 <br><br>
             </div>
          <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bed.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_01.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Dream Bed</a>
+                    <a href="#">KAMPALA</a>
                 </h3>
                 <br><br>
             </div>
@@ -103,28 +103,28 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/decorators.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_02.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Assorted Baskets</a>
+                    <a href="#">ERYATO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/stool.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_03.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Muti Stool/Side Table</a>
+                    <a href="#">BOSTON</a>
                 </h3>
                 <br><br>
             </div>
          <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/bookshelf.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_04.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Zig-Zag Bookcase</a>
+                    <a href="#">CIELO</a>
                 </h3>
                 <br><br>
             </div>
@@ -136,19 +136,19 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/door-mats.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_05.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">Assorted Handmade Rugs</a>
+                    <a href="#">OMUPIIRA</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/table.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_06.jpg" alt="">
                 </a>
                 <h3>
-                    <a href="#">Stump Table</a>
+                    <a href="#">SODO</a>
                 </h3>
                 <br><br>
             </div>
