Added the fourth pagination

--- a/Product_2.html
+++ b/Product_2.html
@@ -179,6 +179,9 @@
                         <a href="product_3.html">3</a>
                     </li>
                     <li>
+                        <a href="product_4.html">4</a>
+                    </li>
+                    <li>
                         <a href="#">&raquo;</a>
                     </li>
                 </ul>
