Added the header photo and deleted the previous one

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ src="https://www.facebook.com/tr?id=610600425811910&ev=PageView&noscript=1"
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" style="background-image: url(images/cover2.jpg); background-size: cover;">
+    <div class="jumbotron" style="background-image: url(images/Header_home-02.jpg); background-size: cover;">
       <div class="container">
         <br><h1>Bold. Modern. Comfortable.<br>Furniture Proudly Handmade in Uganda</h1><br>
         <p>Muti Furniture makes statement pieces for your home. We let the melodic detail of the wood and skillfull handmade quality speak for itself.</p><br><br><br><br><br>
