changed the button color to navbar color, and button outline to white

--- a/Product_3.html
+++ b/Product_3.html
@@ -69,94 +69,101 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_07.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">KYAALO</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_08.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">ZIG ZAG</a>
-                </h3>
-                <br><br>
-            </div>
-         <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/sofa_01.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">KAMPALA</a>
-                </h3>
-                <br><br>
-            </div>
-
-        </div>
-        <!-- /.row -->
-
-
-  <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/sofa_02.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">ERYATO</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/sofa_03.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">BOSTON</a>
-                </h3>
-                <br><br>
-            </div>
-         <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/sofa_04.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">CIELO</a>
-                </h3>
-                <br><br>
-            </div>
-
-        </div>
-        <!-- /.row -->
-
-  <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/sofa_05.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">OMUPIIRA</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
                     <img class="img-responsive" src="images/sofa_06.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">ISLE</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/sofa_08.png" alt="">
                 </a>
                 <h3>
                     <a href="#">SODO</a>
                 </h3>
                 <br><br>
             </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/sofa_05.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">OMUPIRA</a>
+                </h3>
+                <br><br>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_01.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">CUBE TRAY</a>
+                </h3>
+                <br><br>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_02.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">EMPEWO</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_03.png"alt="">
+                </a>
+                <h3>
+                    <a href="#">RIO</a>
+                </h3>
+                <br><br>
+            </div>
+
         </div>
         <!-- /.row -->
 
 
+  <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_04.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">LOG</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_05.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">KIRO</a>
+                </h3>
+                <br><br>
+            </div>
+         <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_06.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">PEMBE</a>
+                </h3>
+                <br><br>
+            </div>
 
+        </div>
+        <!-- /.row -->
 
         <hr>
 
