--- a/Product_4.html
+++ b/Product_4.html
@@ -69,14 +69,55 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Coffee-table_01.png" alt="">
+                    <img class="img-responsive" src="images/Sidetable_08.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">BINJI</a>
+                    <a href="#">ZIG ZAG</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_07.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">KYAALO</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_09.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">WABWELU</a>
+                </h3>
+                <br><br>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <!-- Projects Row -->
+        <div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Sidetable_10.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">MUNDA</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Coffee-table_06.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">RUSSIAN HILL</a>
+                </h3>
+                <br><br>
+            </div>
+         <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="images/Coffee-table_02.png" alt="">
                 </a>
@@ -85,16 +126,6 @@
                 </h3>
                 <br><br>
             </div>
-         <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Coffee-table_03.jpg" alt="">
-                </a>
-                <h3>
-                    <a href="#">OKUPANGA</a>
-                </h3>
-                <br><br>
-            </div>
-
         </div>
         <!-- /.row -->
 
@@ -103,13 +134,36 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Coffee-table_04.png" alt="">
+                    <img class="img-responsive" src="images/Coffee-table_04.jpg" alt="">
                 </a>
                 <h3>
                     <a href="#">FRANCISCO</a>
                 </h3>
                 <br><br>
             </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Coffee-table_03.jpg" alt="">
+                </a>
+                <h3>
+                    <a href="#">OKUPANGA</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Coffee-table_07.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">OKUPANGA</a>
+                </h3>
+                <br><br>
+            </div>
+        </div>
+        <!-- /.row -->
+
+           <!-- Projects Row -->
+        <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="images/Coffee-table_05.png" alt="">
@@ -119,12 +173,21 @@
                 </h3>
                 <br><br>
             </div>
-         <div class="col-md-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Coffee-table_06.png" alt="">
+                    <img class="img-responsive" src="images/Coffee-table_01.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">RUSSIAN HILL</a>
+                    <a href="#">BINJI</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Shelves.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">TRIANGLE</a>
                 </h3>
                 <br><br>
             </div>
