--- a/Product.html
+++ b/Product.html
@@ -131,7 +131,16 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Chair_01.png" alt="">
+                    <img class="img-responsive" src="images/Dining_07.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">RIVER</a>
+                </h3>
+                <br><br>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Dining_08.png" alt="">
                 </a>
                 <h3>
                     <a href="#">COUNTRY</a>
@@ -140,24 +149,14 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Chair_02.png" alt="">
+                    <img class="img-responsive" src="images/Chair_01.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">NYOTA</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Chair_03.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">ELM</a>
+                    <a href="#">COUNTRY</a>
                 </h3>
                 <br><br>
             </div>
         </div>
-        <!-- /.row -->
 
         <hr>
 
