--- a/Product_2.html
+++ b/Product_2.html
@@ -65,7 +65,17 @@
         </div>
         <!-- /.row -->
 
-        <div class="row">
+         <!-- Projects Row -->
+        <div class="row">  
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Chair_02.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">NYOTA</a>
+                </h3>
+                <br><br>
+            </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="images/Chair_04.png" alt="">
@@ -75,9 +85,22 @@
                 </h3>
                 <br><br>
             </div>
+             <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/Chair_03.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">ELM</a>
+                </h3>
+                <br><br>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Chair_05.png" alt="">
+                    <img class="img-responsive" src="images/Chair_07.png" alt="">
                 </a>
                 <h3>
                     <a href="#">AMANYI</a>
@@ -93,6 +116,15 @@
                 </h3>
                 <br><br>
             </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/sofa_01.png" alt="">
+                </a>
+                <h3>
+                    <a href="#">KAMPALA</a>
+                </h3>
+                <br><br>
+            </div>
         </div>
         <!-- /.row -->
 
@@ -100,64 +132,32 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_01.jpg" alt="">
+                    <img class="img-responsive" src="images/sofa_02.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">CUBE TRAY</a>
+                    <a href="#">ERYATO</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_02.png" alt="">
+                    <img class="img-responsive" src="images/sofa_03.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">EMPEWO</a>
+                    <a href="#">BOSTON</a>
                 </h3>
                 <br><br>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_03.png" alt="">
+                    <img class="img-responsive" src="images/sofa_11.png" alt="">
                 </a>
                 <h3>
-                    <a href="#">RIO</a>
+                    <a href="#">CIELO</a>
                 </h3>
                 <br><br>
             </div>
         </div>
-
-        <!-- Projects Row -->
-        <div class="row">
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_04.jpg" alt="">
-                </a>
-                <h3>
-                    <a href="#">LOG</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_05.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">KIRO</a>
-                </h3>
-                <br><br>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="images/Sidetable_06.png" alt="">
-                </a>
-                <h3>
-                    <a href="#">PEMBE</a>
-                </h3>
-                 <br><br>
-            </div>
-        </div>
-        <!-- /.row -->
 
         <hr>
 
